--- a/Index.html
+++ b/Index.html
@@ -116,6 +116,11 @@
       cursor: pointer;
       transition: background 160ms ease, transform 120ms ease, box-shadow 160ms ease;
     }
+/* 
+  Author: Victoria Okello
+  Project: Conference Registration System 
+  Year: 2025
+*/
 
     .btn-primary {
       background: var(--primary);
@@ -165,5 +170,12 @@
       </div>
     </div>
   </div>
+  <!-- 
+  Conference Registration System
+  Author: Victoria Okello
+  Created: 2025
+  Ownership: This code is authored by Victoria Okello.
+-->
+
 </body>
 </html>
