--- a/RegistrationOptions.html
+++ b/RegistrationOptions.html
@@ -106,6 +106,11 @@
       margin-top: auto;
       gap: 8px;
     }
+/* 
+  Author: Victoria Okello
+  Project: Conference Registration System 
+  Year: 2025
+*/
 
     .btn {
       appearance: none;
@@ -165,5 +170,10 @@
       </div>
     </div>
   </div>
+<!-- 
+  Conference Registration System
+  Author: Victoria Okello
+  Created: 2025
+  Ownership: This code is authored by Victoria Okello.
 </body>
 </html>
