--- a/conference.html
+++ b/conference.html
@@ -39,6 +39,13 @@
     .exhibition-list {
       margin-left: 20px;
     }
+    /* 
+  Author: Victoria Okello 
+  Project: Conference Registration System 
+  Year: 2025
+  Ownership Notice: Proprietary code.
+*/
+
   </style>
 </head>
 <body>
